guestbook/guestbook-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui
  namespace: hipster-01
  annotations:
    nodeportlocal.antrea.io/enabled: "true"
spec:
  type: ClusterIP
  selector:
    app: guestbook-ui
  ports:
  - port: 80
    targetPort: 80
