guestbook/guestbook-ui-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: avi-gateway
  namespace: hipster-01
spec:
  gatewayClassName: avi-lb
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: guestbook-route
  namespace: hipster-01
spec:
  parentRefs:
  - name: avi-gateway
  hostnames:
  - "guestbook.quadroolabs.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: guestbook-ui
      port: 80
